@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tcl installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.64 2003/01/25 12:48:12 mdejong Exp $
+# RCS: @(#) $Id: configure.in,v 1.65 2003/01/27 02:19:57 mdejong Exp $
 
 AC_INIT(../generic/tcl.h)
 AC_PREREQ(2.13)
@@ -223,6 +223,26 @@ if test "$tcl_cv_malloc_decl_alloca" = "no" &&
     AC_DEFINE(HAVE_ALLOCA_GCC_INLINE, 1,
             [Defined when gcc should use inline ASM to call alloca.])
 fi
+
+# See if the compiler supports casting to a union type.
+# This is used to stop gcc from printing a compiler
+# warning when initializing a union member.
+
+AC_CACHE_CHECK(for cast to union support,
+    tcl_cv_cast_to_union,
+AC_TRY_COMPILE([],
+[
+  union foo { int i; double d; };
+  union foo f = (union foo) (int) 0;
+],
+        tcl_cv_cast_to_union=yes,
+        tcl_cv_cast_to_union=no)
+)
+if test "$tcl_cv_cast_to_union" = "yes"; then
+    AC_DEFINE(HAVE_CAST_TO_UNION, 1,
+            [Defined when compiler supports casting to union type.])
+fi
+
 
 #--------------------------------------------------------------------
 # Determines the correct binary file extension (.o, .obj, .exe etc.)
